--- a/src/views/register.html
+++ b/src/views/register.html
@@ -76,22 +76,13 @@
                     <input type="radio" name="perfil-de-usuario" value="Vendedor">
                 </div>
                 <h5>Intereses</h5>
-                <div class=>
-                    <label for="Electro">Electro</label>
-                    <input type="checkbox" name="hobbies">
+                <div class="contenedor-checkbox">
+                    <label for="Electro"><input type="checkbox" name="hobbies" value="Electro"> Electro</label>
+                    <label for="Moda"><input type="checkbox" name="hobbies" value="Moda">Moda</label>
+                    <label for="Hogar"><input type="checkbox" name="hobbies" value="Hogar">Hogar</label>
+                    <label for="Jugueteria"><input type="checkbox" name="hobbies" value="Jugueteria">Jugueteria</label>
+                    <label for="Vida Sana"><input type="checkbox" name="hobbies" value="Vida Sana">Vida Sana</label>
 
-                    <label for="Moda">Moda</label>
-                    <input type="checkbox" name="hobbies" value="Moda">
-
-                    <label for="Hogar">Hogar</label>
-                    <input type="checkbox" name="hobbies" value="Hogar">
-
-                    <label for="Jugueteria">Jugueteria</label>
-                    <input type="checkbox" name="hobbies" value="Jugueteria">
-
-                    <label for="Vida Sana">Vida Sana</label>
-                    <input type="checkbox" name="hobbies" value="Vida Sana">
-            
                 </div>
                 <button type="submit">Enviar</button>
             </form>
