--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -1,26 +1,16 @@
-:root {
-    --primario: #db0034;
-    --secundario: #eeeeee;
-    --links: #ada9a9;
-    --bg-primario: #424242;
-    --bg-secundario: #101010;
+
+.logo-mercado-liebre {
+    width: 20%;
+    padding: 10px;
 }
+
+.img__banner {
+    display: none;
+}
+
 
 .nav_bar {
     display: flex;
-}
-
-ul {
-    display: flex;
-    flex-wrap: wrap;
-    list-style-type: none;
-    justify-content: center;
-}
-
-li {
-    margin-right: 10px;
-    /* Espacio entre elementos de la lista */
-    padding: 10px;
 }
 
 .barra_busqueda {
@@ -29,6 +19,7 @@ li {
     position: relative;
     /* Establece la posición relativa para que la posición absoluta funcione dentro de ella */
 }
+
 
 /* Estilos para el campo de búsqueda */
 .campo_busqueda {
@@ -44,6 +35,7 @@ li {
     /* Hace que el campo de búsqueda ocupe el espacio disponible */
 }
 
+
 /* Estilos para la lupa (imagen) */
 .lupa {
     position: absolute;
@@ -54,27 +46,24 @@ li {
 }
 
 
-.img__banner {
-    display: none;
-}
-
-.logo-mercado-liebre {
-    width: 20%;
-    padding: 10px;
-}
-
-.encabezado {
-    display: flex;
-    justify-content: space-around;
-}
 
 .alinea{
     padding: 10px 50px 10px 10px;
     margin-top: 10px;
 }
 
-.alineacion {
-    text-align: center;
+
+ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    justify-content: center;
+}
+
+li {
+    margin-right: 10px;
+    /* Espacio entre elementos de la lista */
+    padding: 10px;
 }
 
 
@@ -90,16 +79,6 @@ li {
 }
 
 
-input {
-    width: 100%;
-    margin: 10px;
-    padding: 10px;
-    border-radius: 5px;
-    border-style: hidden;
-    display: flex;
-    justify-content: center;
-}
-
 button {
     display: flex;
     justify-content: center;
@@ -108,4 +87,21 @@ button {
     padding: 10px;
     color: white;
     background-color: blue;
+    transition: background-color 0.3s ease; /* Transición suave para un cambio gradual */
+}
+
+
+button:hover {
+    background-color: #0022AA; /* Cambia este valor al color deseado al pasar el mouse por encima */
+  }
+
+
+input {
+    width: 100%;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    border-style: hidden;
+    display: flex;
+    justify-content: center;
 }
